# MockUpAgent

./: .gitignore  README.md  agent.py  agent_model.py  cli_test.py  deep_agent.py  dockerfile  example.response.md  loadpdf.py  main.py  makefile  mcp_cli.py  mockmodel.py  output.md  registry.json  requirements.txt  server.py  test.py  test_units.py
Backend/: .gitignore  README.md  agent_model.py  dockerfile  main.py  pyproject.toml
Backend/k8s/: deployment.yaml
Backend/mcp_hub/: __init__.py  mcphub.py
Backend/utils/: __init__.py
Backend/utils/logger/: logger.py
Backend/utils/stream/: context_decoder.py
mcp/: .gitignore  main.go
model/: custom_model_01.py  custom_model_02.py
model/hf/: README.md  custom_model_01.py
model/ollama/: custom_model_01.py
prompts/: example.system.txt
research_agent/: tools.py
schemas/: __init__.py  model_schemas.py
skills/agent/: skills.md
test/: __init__.py  main.py  test_units.py
tools/: __init__.py  file_management_tools.py  general_tools.py  retriever_tools.py  secure_tools.py  time_tools.py
utils/: __init__.py  version_checking.py
utils/logger/: logger.py
utils/stream/: context_decoder.py
vector/: README.md  __init__.py  cli.py  qdrant-deployment.yaml
