[project]
name = "backend-replica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "fastapi-mcp>=0.4.0",
    "langchain>=1.2.6",
    "langchain-core>=1.2.7",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.6",
    "mcp>=1.25.0",
    "ollama>=0.6.1",
    "pyautogui>=0.9.54",
    "ruff>=0.14.13",
    "uvicorn>=0.40.0",
]
